configuration from github

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ DISCOVERY_SERVICE_NAME=discovery-service
 DISCOVERY_SERVICE_PORT=8761
 USER_SERVICE_NAME=user-service
 USER_SERVICE_PORT=4001
+CONFIG_SERVICE_NAME=config-service
+CONFIG_SERVICE_PORT=4002
+SPRING_EUREKA_CLIENT_URL=http://${DISCOVERY_SERVICE_NAME}:${DISCOVERY_SERVICE_PORT}/eureka/
+SPRING_CLOUD_CONFIG_URI=http://${CONFIG_SERVICE_NAME}:${CONFIG_SERVICE_PORT}
