--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>org.loop</groupId>
-	<artifactId>troop</artifactId>
+	<groupId>org.loop.troop</groupId>
+	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>user-service</name>
 	<description>spring boot eureka user service</description>
