--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   application:
       name: user-service
   config:
-    import: configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8083}
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8083}
     
 server:
     port: 8081        
