--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ CONFIG_SERVICE_NAME=config-service
 CONFIG_SERVICE_PORT=4002
 SPRING_EUREKA_CLIENT_URL=http://${DISCOVERY_SERVICE_NAME}:${DISCOVERY_SERVICE_PORT}/eureka/
 SPRING_CLOUD_CONFIG_URI=http://${CONFIG_SERVICE_NAME}:${CONFIG_SERVICE_PORT}
+ZIPKIN_URI=http://zipkin:9411/api/v2/spans
