--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   discovery-service:
     build:
@@ -10,7 +8,8 @@ services:
     environment:
       SERVER_PORT: ${DISCOVERY_SERVICE_PORT}
       SPRING_PROFILES_ACTIVE: prod
-
+    networks:
+      - app-net   
   user-service:
     build:
       context: ./user-service
@@ -19,6 +18,29 @@ services:
       - "${USER_SERVICE_PORT}:${USER_SERVICE_PORT}"
     environment:
       SERVER_PORT: ${USER_SERVICE_PORT}
-      DISCOVERY_SERVICE_NAME: ${DISCOVERY_SERVICE_NAME}
-      DISCOVERY_SERVICE_PORT: ${DISCOVERY_SERVICE_PORT}
+      SPRING_EUREKA_CLIENT_URL: ${SPRING_EUREKA_CLIENT_URL}
+      SPRING_CLOUD_CONFIG_URI: ${SPRING_CLOUD_CONFIG_URI}
       SPRING_PROFILES_ACTIVE: prod
+      ZIPKIN_URI: ${ZIPKIN_URI}
+    depends_on:
+      - config-service
+    networks:
+      - app-net  
+
+  config-service:
+    build:
+      context: ./config-service
+      dockerfile: ./Dockerfile.prod
+    ports:
+      - "${CONFIG_SERVICE_PORT}:${CONFIG_SERVICE_PORT}"
+    environment:
+      SERVER_PORT: ${CONFIG_SERVICE_PORT}
+      SPRING_EUREKA_CLIENT_URL: ${SPRING_EUREKA_CLIENT_URL}
+    depends_on:
+      - discovery-service
+    networks:
+      - app-net        
+
+networks:
+  app-net:
+    external: true  
