kafka event, pushing user-service config to cloud

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ CONFIG_SERVICE_PORT=4002
 SPRING_EUREKA_CLIENT_URL=http://${DISCOVERY_SERVICE_NAME}:${DISCOVERY_SERVICE_PORT}/eureka/
 SPRING_CLOUD_CONFIG_URI=http://${CONFIG_SERVICE_NAME}:${CONFIG_SERVICE_PORT}
 ZIPKIN_URI=http://zipkin:9411/api/v2/spans
+DB_URI=jdbc:postgresql://postgresql:5432/book-club
+KAFKA_SERVER=kafka:9092
+MINIO_URI=http://minio:9000
