--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
     config:
       server:
         git:
-          label: main
+          default-label: main
           uri: https://github.com/vivekPandeyDev/config
-          clone-on-start: true
+          timeout: 5000
+          read-timeout: 5000
