--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -10,6 +10,7 @@ services:
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_SERVER_URL: http://localhost:9000
     command: server /data --console-address ":9001"
     volumes:
       - ./docker/minio:/data
