kafka event config using string for conversion for user_events

--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -1,6 +1,20 @@
 
 services:
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8085:8080" # Access Kafka UI at http://localhost:8085
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9093
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+    depends_on:
+      - kafka
+      - zookeeper
+    networks:
+      - app-net
   minio:
     image: minio/minio
     container_name: minio-app
