--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: user-service
   config:
-    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:4002}
+    import: configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:4002}
